update link and pic

--- a/aboutus.html
+++ b/aboutus.html
@@ -83,6 +83,9 @@
     </div>
     <!-- 頂端logo與購物車結束 -->
     <!-- 上半部 -->
+    <div class="movie">
+        <video src="./images/movie03.mp4" autoplay loop muted></video>
+    </div>
     <section class="container">
         <div class="slogn">
             <div class="txt">
@@ -101,43 +104,26 @@
                     及最經典且新鮮的德式啤酒，讓我們陪伴你度過每個人生的重要時刻！Prost！
                 </p>
             </div>
-            <div class="pic bar">
-                <video src="./images/movie03.mp4" autoplay loop muted width="500px" height="400px"></video>
+            <div class="pic graycat">
+                <img src="./images/about_beerbar.jpg" alt="啤酒拉吧機">
             </div>
-            <div class="pic bar">
-                <img src="./images/about_beer.png" alt="啤酒拉吧機">
+        </div>
+        <div class="aboutfood">
+            <div class="pic catkao">
+                <img src="./images/about_beerset.jpg" alt="啤酒組合">
             </div>
-    </section>
-    <section class="content">
-        <div class="description">
-            <div class="side-pic">
-                <div class="pic cat">
-                    <img src="./images/about_cat_sleep.jpg" alt="睡覺的橘貓">
-                </div>
-                <div class="pic beer">
-                    <img src="./images/about_beerset.jpg" alt="啤酒組合">
-                </div>
-            </div>
-            <div class="side-txt">
-                <div class="pic flower">
-                    <img src="./images/about_beerflower.png" alt="啤酒花">
-                </div>
-                <div class="txt">
-                    <h2>
-                        從享受「啤酒」出發，<br>
-                        讓餐點與啤酒完美結合。<br>
-                    </h2>
-                    <p>
-                        以『啤酒』為中心，發展出餐飲品牌：
-                        『MIU BEERHOUSE 喵 啤酒餐廳』、
-                        『MIU YAKINIKU 喵 燒肉屋』。
-                        12款啤酒從工廠新鮮直送，配上豐富的美味料理，
-                        綻出啤酒多元生活享受，<br>引領全新時尚飲酒態度！
-                    </p>
-                </div>
-                <div class="pic cat">
-                    <img src="./images/about_cat_sleep_right.jpg" alt="睡覺的三花貓">
-                </div>
+            <div class="txt">
+                <h2>
+                    從享受「啤酒」出發，<br>
+                    讓餐點與啤酒完美結合。<br>
+                </h2>
+                <p>
+                    以『啤酒』為中心，發展出餐飲品牌：
+                    『MIU BEERHOUSE 喵 啤酒餐廳』、
+                    『MIU YAKINIKU 喵 燒肉屋』。
+                    12款啤酒從工廠新鮮直送，配上豐富的美味料理，
+                    綻出啤酒多元生活享受，<br>引領全新時尚飲酒態度！
+                </p>
             </div>
         </div>
     </section>
@@ -245,7 +231,7 @@
     <div class="warning-box">
         <div class="warning-box-txt">
             <p class="drink"><span>禁止</span>酒駕 未滿十八歲 禁止飲酒</p>
-            <p class="tibame">本網站為緯育TibaMe前端工程師班第85期學員專題作品，本平台僅供學習、展示之用。參考網站: 柏克金/台灣啤酒/百事可樂</p>
+            <p class="tibame">本網站為緯育TibaMe前端工程師班第86期學員專題作品，本平台僅供學習、展示之用。參考網站: 柏克金/台灣啤酒/百事可樂</p>
         </div>
     </div>
     <!-- footer結束 -->
