--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         啤酒最早起源於中東美索不達米亞平原蘇美爾人聚集地，如果算上他們種植和培育啤酒重要原料-大麥的時間，距今約有8000年歷史，但遺憾的是如今整個中東都不再飲酒了。
                     </p>
                     <h3>
-                        2. 不同國家的啤酒有哪些不同的特色呢？
+                        2. 不同國家的啤酒特色為何？
                     </h3>
                     <p>
                         每個國家的手工啤酒，因為水質、氣候等環境條件的不同，也各自形塑出獨樹一格的精釀啤酒。
