更新影片以及調整間距

--- a/aboutus.html
+++ b/aboutus.html
@@ -84,7 +84,8 @@
     <!-- 頂端logo與購物車結束 -->
     <!-- 上半部 -->
     <div class="movie">
-        <video src="./images/movie03.mp4" autoplay loop muted></video>
+        <!-- <span>關於MIU BEER</span> -->
+        <video src="./images/about_movie.mp4" autoplay loop muted></video>
     </div>
     <section class="container">
         <div class="slogn">
@@ -170,14 +171,14 @@
             <label for="switch">
                 <ul>
                     <li class="btn">
-                        <span>2022</span>
+                        <img src="./images/about_clickme.svg" alt="">
                     </li>
                 </ul>
             </label>
             <label for="switch-two">
                 <ul>
                     <li class="btn">
-                        <span>2023</span>
+                        <img src="./images/about_clickme.svg" alt="">
                     </li>
                 </ul>
             </label>
