--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     </h3>
                     <p>
                         每個國家的手工啤酒，因為水質、氣候等環境條件的不同，也各自形塑出獨樹一格的精釀啤酒。
-                        美式精釀的酒花濃郁，德式精釀的清爽俐落，英式啤酒非常講究香氣層次，比利時啤酒風味繽紛
+                        美式精釀的酒花濃郁，德式精釀的清爽俐落，英式啤酒非常講究香氣層次，比利時啤酒風味繽紛。
                     </p>
                 </div>
             </div>
