--- a/news.html
+++ b/news.html
@@ -128,7 +128,7 @@
             <a href="#">
                 <img src="./images/news_chill.png" alt="商業午餐">
                 <span>
-                    上班辛苦了！平日午間提供商業午餐，一起chill一下！
+                    上班辛苦了！<br>平日午間提供商業午餐，一起chill一下！
                 </span>
             </a>
         </div>
