更新首頁 調整footer

--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
                     <span>Menu</span>
                 </div>
             </label>
-            <nav class="menu-list">
+            <div class="menu-list">
                 <div class="menu-logo">
                     <a href="index.html" target="_blank">
                         <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
@@ -39,26 +39,26 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="./aboutus.html">關於品牌</a>
+                        <a href="./news.html">最新消息</a>
                     </li>
                     <li>
-                        <a href="./food.html">美味料理</a>
+                        <a href="./aboutus.html">關於品牌</a>
                     </li>
                     <li>
                         <a href="./classic-beer.html">啤酒介紹</a>
                     </li>
                     <li>
-                        <a href="./takeout.html">我要外帶</a>
+                        <a href="./food.html">美味料理</a>
                     </li>
 
                     <li>
-                        <a href="./news.html">最新消息</a>
+                        <a href="./takeout.html">我要外帶</a>
                     </li>
                     <li>
-                        <a href="location.html">美味據點</a>
+                        <a href="./location.html">美味據點</a>
                     </li>
                 </ul>
-            </nav>
+            </div>
         </div>
     </header>
     <!-- 漢堡選單結束 -->
@@ -82,9 +82,8 @@
         </div>
     </div>
     <!-- 頂端logo與購物車結束 -->
-    <!-- 上半部 -->
+    <!-- 上半部開始 -->
     <div class="movie">
-        <!-- <span>關於MIU BEER</span> -->
         <video src="./images/about_movie.mp4" autoplay loop muted></video>
     </div>
     <section class="container">
@@ -128,62 +127,8 @@
             </div>
         </div>
     </section>
-    <!-- 中間大圖區 -->
-    <div class="center-pic">
-        <div class="beer">
-            <img src="./images/about_bottle.png" alt="倒啤酒">
-            <div class="bubbles">
-                <img src="./images/about_center.png" alt="啤酒氣泡">
-                <div class="center-txt">
-                    <h3>MIU BEER</h3>
-                    <img src="./images/aboutus_beer cup.png" alt="小啤酒圖標">
-                    <p>
-                        歐式風格料理，從開胃菜、主菜到甜點，皆以啤酒為中心。每道佳餚都適合搭配啤酒更同享用，顛覆想像的創新滋味；店內還有貓咪店長 Miu 巡店，喜歡擼貓的你，快一起加入吧！
-                        <a href="./food.html">詳見菜單</a>
-                        <a href="./location.html">服務據點</a>
-                    </p>
-                </div>
-                <div class="bbq">
-                    <div class="center-txt">
-                        <h3>MIU BBQ</h3>
-                        <img src="./images/aboutus_beer cup.png" alt="小啤酒圖標">
-                        <p>
-                            嚴選超過40種肉類、海鮮與蔬菜食材，讓您在烤盤上排列組合迸出各式美味。有別於傳統日式燒肉，不論是裝潢風格或是特色餐點皆融合異國風情，並研發獨家私藏餐點，給予你一場舌尖上的饗宴。
-                            <a href="./food.html">詳見菜單</a>
-                            <a href="./location.html">服務據點</a>
-                        </p>
-                    </div>
-                    <img src="./images/about_bbq.png" alt="烤肉拼盤">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- 下半部Our story -->
-    <input type="radio" id="switch" name="pic">
-    <input type="radio" id="switch-two" name="pic">
-    <div class="story-wrap">
-        <h2>OUR STORY</h2>
-        <div class="pic">
-            <img class="staff" src="./images/about_story.png" alt="職人精神">
-            <img class="staffoneman" src="./images/about_stories.png" alt="傳奇精釀">
-        </div>
-        <div class="circle">
-            <label for="switch">
-                <ul>
-                    <li class="btn">
-                        <img src="./images/about_clickme.svg" alt="">
-                    </li>
-                </ul>
-            </label>
-            <label for="switch-two">
-                <ul>
-                    <li class="btn">
-                        <img src="./images/about_clickme.svg" alt="">
-                    </li>
-                </ul>
-            </label>
-        </div>
-    </div>
+    <!-- 上半部結束 -->
+
     <!-- footer開始 -->
     <footer>
         <div class="footer-pic">
@@ -194,19 +139,21 @@
         <div class="footer txt">
             <ul>
                 <li>
-                    <a href="./food.html">美味料理</a>
+                    <a href="./news.html">最新消息</a>
+
                 </li>
                 <li>
-                    <a href="./takeout.html">我要外帶</a>
+                    <a href="./aboutus.html">關於品牌</a>
+
                 </li>
                 <li>
                     <a href="./classic-beer.html">啤酒介紹</a>
                 </li>
                 <li>
-                    <a href="./news.html">最新消息</a>
+                    <a href="./food.html">美味料理</a>
                 </li>
                 <li>
-                    <a href="./aboutus.html">關於品牌</a>
+                    <a href="./takeout.html">我要外帶</a>
                 </li>
                 <li>
                     <a href="location.html">美味據點</a>
@@ -231,8 +178,8 @@
     </footer>
     <div class="warning-box">
         <div class="warning-box-txt">
-            <p class="drink"><span>禁止</span>酒駕 未滿十八歲 禁止飲酒</p>
-            <p class="tibame">本網站為緯育TibaMe前端工程師班第86期學員專題作品，本平台僅供學習、展示之用。參考網站: 柏克金/台灣啤酒/百事可樂</p>
+            <p class="drink">禁止酒駕<img src="./images/footer_drive.gif" alt="禁止酒駕">未滿十八歲 禁止飲酒</p>
+            <p class="tibame">本網站為緯育TibaMe前端班第86期學員專題作品，本平台僅供學習、展示之用。</p>
         </div>
     </div>
     <!-- footer結束 -->
