--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span>Menu</span>
                 </div>
             </label>
-            <nav class="menu-list">
+            <div class="menu-list">
                 <div class="menu-logo">
                     <a href="index.html" target="_blank">
                         <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
@@ -39,26 +39,26 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="./aboutus.html">關於品牌</a>
+                        <a href="./news.html">最新消息</a>
                     </li>
                     <li>
-                        <a href="./food.html">美味料理</a>
+                        <a href="./aboutus.html">關於品牌</a>
                     </li>
                     <li>
                         <a href="./classic-beer.html">啤酒介紹</a>
                     </li>
                     <li>
-                        <a href="./takeout.html">我要外帶</a>
+                        <a href="./food.html">美味料理</a>
                     </li>
 
                     <li>
-                        <a href="./news.html">最新消息</a>
+                        <a href="./takeout.html">我要外帶</a>
                     </li>
                     <li>
                         <a href="./location.html">美味據點</a>
                     </li>
                 </ul>
-            </nav>
+            </div>
         </div>
     </header>
     <!-- 漢堡選單結束 -->
@@ -90,18 +90,6 @@
         </div>
     </div>
     <!----------- 首頁_banner結束 ---------->
-
-    <!-- 首頁第二張大啤酒圖開始 -->
-
-    <div class="center-banner">
-        <div class="center-banner-txt">
-            <span>在微醺中，</span>
-            <br>
-            <span>把自己還給自己。</span>
-        </div>
-    </div>
-    <!-- 首頁第二張大啤酒圖結束 -->
-
     <!-- 活動卡片區開始 -->
     <div class="news">
         <h1>最新消息</h1>
@@ -170,12 +158,7 @@
 
     <!-- 首頁影片區 -->
     <div class="draft-beer">
-        <div class="draft-beer-pic">
-            <img src="./images/bow.svg" alt="Draft Beer">
-        </div>
-        <div class="draft-beer-txt">
-            <h2>Draft Beer</h2>
-        </div>
+        <h2>精釀．工藝</h2>
     </div>
     <div class="draft-beer-video">
         <video src="./images/movie-beer.mp4" autoplay loop muted controls width="700"></video>
@@ -234,63 +217,72 @@
         </a>
     </div>
     <!-- 食物卡片區結束 -->
-    <!-- 底部知識區開始 -->
-    <article>
-        <h2>
-            啤酒知識+
-        </h2>
-        <div class="beer-know">
-            <div class="top-know">
-                <div class="pic">
-                    <img src="./images/index_beerhand.png" alt="a beer">
-                </div>
-                <div class="txt">
-                    <h3>
-                        1. 啤酒源自中東
-                    </h3>
-                    <p>
-                        啤酒最早起源於中東美索不達米亞平原蘇美爾人聚集地，如果算上他們種植和培育啤酒重要原料-大麥的時間，距今約有8000年歷史，但遺憾的是如今整個中東都不再飲酒了。
-                    </p>
-                    <h3>
-                        2. 不同國家的啤酒特色為何？
-                    </h3>
-                    <p>
-                        每個國家的手工啤酒，因為水質、氣候等環境條件的不同，也各自形塑出獨樹一格的精釀啤酒。
-                        美式精釀的酒花濃郁，德式精釀的清爽俐落，英式啤酒非常講究香氣層次，比利時啤酒風味繽紛。
-                    </p>
-                </div>
-            </div>
-            <div class="bottom-know">
-                <div class="pic">
-                    <img src="./images/index_beerflower.png" alt="beer flower">
-                </div>
-                <div class="txt">
-                    <h3>
-                        3. 什麼是精釀啤酒？
-                    </h3>
-                    <p>
-                        精釀啤酒和一般常見的商業啤酒，最主要差別就在成份，以及釀製方式。
-                        美國釀酒師協會定義「手工精釀啤酒」為：產量少、獨立製造、以傳統手法釀酒。
-                    </p>
-                    <h3>
-                        4. 啤酒花是大麻的親戚
-                    </h3>
-                    <p>
-                        啤酒花不是酒杯上部的啤酒泡沫，是一種啤酒增味的植物，它的另一個名稱叫做“蛇麻草”，和大麻同一科，換句話說，是大麻的表兄弟！
-                    </p>
-                </div>
-            </div>
+    <!-- 釀酒廠介紹開始 -->
+    <article class="brewery">
+        <div class="pic">
+            <img src="./images/index_brewery.jpeg" alt="MIU釀酒廠">
         </div>
-        <div class="know-btn">
-            <div class="btn">
-                <a href="./classic-beer.html">
-                    點我了解更多 Miu Beer ...
-                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                </a>
-            </div>
+        <div class="txt">
+            <h2>關於MIU釀酒廠...</h2>
+            <p>釀酒是我們的藝術，獨特的風味是我們的靈感源泉。
+                我們將每一滴酒釀都視為對品味的極致追求，每一道工藝都體現著我們的匠心精神。
+            </p>
+            <p>我們的釀酒師是這片土地上的藝術家，他們擁有豐富的經驗與熱情，
+                以最嚴謹的工藝，用心釀造每一款啤酒。
+                在這個神奇的酒窖裡，你可以感受到釀酒的魔法，嗅到芬芳的香氣，品味到無與倫比的風味。</p>
+            <p>我們的釀酒廠是一個開放的聖殿，讓您可以近距離觀賞釀酒的全過程，
+                親身感受釀酒師的用心與技藝。無論您是啤酒愛好者、釀酒新手，
+                還是尋找不一樣味覺體驗的冒險家，這裡都將成為您的啤酒天堂。</p>
+            <p>在 MIU BEER，我們秉持著對品質的堅持，對創意的追求，用心釀造屬於這片土地的獨一無二的啤酒。
+                我們誠摯地邀請您踏進這個充滿激情的釀酒世界，一同探索啤酒的無限可能性！
+                讓我們一起舉杯，共享這美好的釀酒之旅！</p>
+            <a href="./classic-beer.html">
+                點我看更多關於 Miu Beer ...
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </a>
         </div>
     </article>
-
+    <!-- 釀酒廠介紹結束 -->
+    <!-- 好評推薦區 -->
+    <div class="feedback">
+        <h2>MIU 好評推薦</h2>
+    </div>
+    <div class="feedback-container">
+        <div class="feedback-card">
+            <div class="pic">
+                <img src="./images/index_yellow.jpeg" alt="顧客好評">
+            </div>
+            <div class="txt">
+                <p>我最喜歡Pale Ale！<br>而且在餐廳看球賽很刺激</p>
+            </div>
+            <div class="tag">
+                #來自加拿大的Renee
+            </div>
+        </div>
+        <div class="feedback-card">
+            <div class="pic">
+                <img src="./images/index_green.jpeg" alt="顧客好評">
+            </div>
+            <div class="txt">
+                <p>小孩才做選擇，<br>每種口味我都要！</p>
+            </div>
+            <div class="tag">
+                #來自德國的Hanna
+            </div>
+        </div>
+        <div class="feedback-card">
+            <div class="pic">
+                <img src="./images/index_red.jpeg" alt="顧客好評">
+            </div>
+            <div class="txt">
+                <p>每年的聖誕節<br>我都特別來這喝啤酒兼送禮！</p>
+            </div>
+            <div class="tag">
+                #來自土耳其的Nicholas
+            </div>
+        </div>
+    </div>
+    <!-- 好評推薦結束 -->
     <!-- footer開始 -->
     <footer>
         <div class="footer-pic">
@@ -301,22 +293,24 @@
         <div class="footer txt">
             <ul>
                 <li>
+                    <a href="./news.html">最新消息</a>
+
+                </li>
+                <li>
+                    <a href="./aboutus.html">關於品牌</a>
+
+                </li>
+                <li>
+                    <a href="./classic-beer.html">啤酒介紹</a>
+                </li>
+                <li>
                     <a href="./food.html">美味料理</a>
                 </li>
                 <li>
                     <a href="./takeout.html">我要外帶</a>
                 </li>
                 <li>
-                    <a href="./classic-beer.html">啤酒介紹</a>
-                </li>
-                <li>
-                    <a href="./news.html">最新消息</a>
-                </li>
-                <li>
-                    <a href="./aboutus.html">關於品牌</a>
-                </li>
-                <li>
-                    <a href="./location.html">美味據點</a>
+                    <a href="location.html">美味據點</a>
                 </li>
             </ul>
         </div>
@@ -338,8 +332,8 @@
     </footer>
     <div class="warning-box">
         <div class="warning-box-txt">
-            <p class="drink"><span>禁止</span>酒駕 未滿十八歲 禁止飲酒</p>
-            <p class="tibame">本網站為緯育TibaMe前端工程師班第86期學員專題作品，本平台僅供學習、展示之用。參考網站: 柏克金/台灣啤酒/百事可樂</p>
+            <p class="drink">禁止酒駕<img src="./images/footer_drive.gif" alt="禁止酒駕">未滿十八歲 禁止飲酒</p>
+            <p class="tibame">本網站為緯育TibaMe前端班第86期學員專題作品，本平台僅供學習、展示之用。</p>
         </div>
     </div>
     <!-- footer結束 -->
