--- a/news-page.html
+++ b/news-page.html
@@ -31,7 +31,7 @@
                     <span>Menu</span>
                 </div>
             </label>
-            <nav class="menu-list">
+            <div class="menu-list">
                 <div class="menu-logo">
                     <a href="index.html" target="_blank">
                         <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
@@ -39,26 +39,26 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="./aboutus.html">關於品牌</a>
+                        <a href="./news.html">最新消息</a>
                     </li>
                     <li>
-                        <a href="./food.html">美味料理</a>
+                        <a href="./aboutus.html">關於品牌</a>
                     </li>
                     <li>
                         <a href="./classic-beer.html">啤酒介紹</a>
                     </li>
                     <li>
-                        <a href="./takeout.html">我要外帶</a>
+                        <a href="./food.html">美味料理</a>
                     </li>
 
                     <li>
-                        <a href="./news.html">最新消息</a>
+                        <a href="./takeout.html">我要外帶</a>
                     </li>
                     <li>
                         <a href="./location.html">美味據點</a>
                     </li>
                 </ul>
-            </nav>
+            </div>
         </div>
     </header>
     <!-- 漢堡選單結束 -->
@@ -132,22 +132,24 @@
         <div class="footer txt">
             <ul>
                 <li>
+                    <a href="./news.html">最新消息</a>
+
+                </li>
+                <li>
+                    <a href="./aboutus.html">關於品牌</a>
+
+                </li>
+                <li>
+                    <a href="./classic-beer.html">啤酒介紹</a>
+                </li>
+                <li>
                     <a href="./food.html">美味料理</a>
                 </li>
                 <li>
                     <a href="./takeout.html">我要外帶</a>
                 </li>
                 <li>
-                    <a href="./classic-beer.html">啤酒介紹</a>
-                </li>
-                <li>
-                    <a href="./news.html">最新消息</a>
-                </li>
-                <li>
-                    <a href="./aboutus.html">關於品牌</a>
-                </li>
-                <li>
-                    <a href="./location.html">美味據點</a>
+                    <a href="location.html">美味據點</a>
                 </li>
             </ul>
         </div>
@@ -169,8 +171,8 @@
     </footer>
     <div class="warning-box">
         <div class="warning-box-txt">
-            <p class="drink"><span>禁止</span>酒駕 未滿十八歲 禁止飲酒</p>
-            <p class="tibame">本網站為緯育TibaMe前端工程師班第86期學員專題作品，本平台僅供學習、展示之用。參考網站: 柏克金/台灣啤酒/百事可樂</p>
+            <p class="drink">禁止酒駕<img src="./images/footer_drive.gif" alt="禁止酒駕">未滿十八歲 禁止飲酒</p>
+            <p class="tibame">本網站為緯育TibaMe前端班第86期學員專題作品，本平台僅供學習、展示之用。</p>
         </div>
     </div>
     <!-- footer結束 -->
