--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
 <body>
     <header>
+        <!-- <nav>
+            <a href="./news.html">最新消息</a>
+            <a href="./aboutus.html">關於品牌</a>
+            <a href="./classic-beer.html">啤酒介紹</a>
+            <a href="./food.html">美味料理</a>
+            <a href="./takeout.html">我要外帶</a>
+            <a href="./location.html">美味據點</a>
+        </nav> -->
         <!-- 漢堡底色與線條 -->
         <div class="burger-container">
             <input type="checkbox" id="menu">
@@ -236,7 +244,7 @@
             <p>在 MIU BEER，我們秉持著對品質的堅持，對創意的追求，用心釀造屬於這片土地的獨一無二的啤酒。
                 我們誠摯地邀請您踏進這個充滿激情的釀酒世界，一同探索啤酒的無限可能性！
                 讓我們一起舉杯，共享這美好的釀酒之旅！</p>
-            <a href="./classic-beer.html">
+            <a href="./aboutus.html">
                 點我看更多關於 Miu Beer ...
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </a>
