update booking and header

--- a/index.html
+++ b/index.html
@@ -17,59 +17,41 @@
 
 <body>
     <header>
-        <!-- <nav>
-            <a href="./news.html">最新消息</a>
-            <a href="./aboutus.html">關於品牌</a>
-            <a href="./classic-beer.html">啤酒介紹</a>
-            <a href="./food.html">美味料理</a>
-            <a href="./takeout.html">我要外帶</a>
-            <a href="./location.html">美味據點</a>
-        </nav> -->
-        <!-- 漢堡底色與線條 -->
-        <div class="burger-container">
-            <input type="checkbox" id="menu">
-            <label for="menu">
-                <div class="burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <!-- 漢堡旁的文字 -->
-                <div class="btn-open">
-                    <span>Menu</span>
-                </div>
-            </label>
-            <div class="menu-list">
-                <div class="menu-logo">
-                    <a href="index.html" target="_blank">
-                        <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
-                    </a>
-                </div>
-                <ul>
-                    <li>
-                        <a href="./news.html">最新消息</a>
-                    </li>
-                    <li>
-                        <a href="./aboutus.html">關於品牌</a>
-                    </li>
-                    <li>
-                        <a href="./classic-beer.html">啤酒介紹</a>
-                    </li>
-                    <li>
-                        <a href="./food.html">美味料理</a>
-                    </li>
-
-                    <li>
-                        <a href="./takeout.html">我要外帶</a>
-                    </li>
-                    <li>
-                        <a href="./location.html">美味據點</a>
-                    </li>
-                </ul>
+        <nav>
+            <div class="pic">
+                <a href="index.html">
+                    <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
+                </a>
             </div>
-        </div>
+            <ul>
+                <li>
+                    <a href="./news.html">最新消息</a>
+
+                </li>
+                <li>
+                    <a href="./aboutus.html">關於品牌</a>
+
+                </li>
+                <li>
+                    <a href="./classic-beer.html">啤酒介紹</a>
+                </li>
+                <li>
+                    <a href="./food.html">美味料理</a>
+                </li>
+                <li>
+                    <a href="./takeout.html">我要外帶</a>
+                </li>
+                <li>
+                    <a href="location.html">美味據點</a>
+                </li>
+            </ul>
+            <div class="shopping-cart">
+                <a href="./shopping-cart.html">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </a>
+            </div>
+        </nav>
     </header>
-    <!-- 漢堡選單結束 -->
     <!-- 立即訂位開始 -->
     <div class="booking-btn">
         <a href="./booking.html">
@@ -78,26 +60,18 @@
         </a>
     </div>
     <!-- 立即訂位結束 -->
-    <!----------- 首頁_banner ---------->
-    <div class="marquee">
-        <p>店長Miumiu上班時間:週一至週五 15:00~20:00 微服出巡，喜愛貓咪的您不要錯過囉！</p>
-    </div>
+    <!----------- 首頁_banner&跑馬燈 ---------->
     <div class="top">
         <div class="top-mask"></div>
-        <a href="index.html">
-            <img class="logo" src="./images/miu_logo_gold.svg" alt="Miu Beer">
-        </a>
-        <div class="shopping-cart">
-            <a href="./shopping-cart.html">
-                <img src="./images/shoppingcart.svg" alt="購物車">
-            </a>
-        </div>
         <div class="top-banner-txt">
             <span>喝杯啤酒，擼一隻貓</span><br>
             <span>一起度過美好靜謐時光</span>
         </div>
     </div>
-    <!----------- 首頁_banner結束 ---------->
+    <div class="marquee">
+        <p>店長Miumiu上班時間:週一至週五 15:00~20:00 微服出巡，喜愛貓咪的您不要錯過囉！</p>
+    </div>
+    <!----------- 首頁_banner&跑馬燈結束 ---------->
     <!-- 活動卡片區開始 -->
     <div class="news">
         <h1>最新消息</h1>
@@ -235,19 +209,16 @@
             <p>釀酒是我們的藝術，獨特的風味是我們的靈感源泉。
                 我們將每一滴酒釀都視為對品味的極致追求，每一道工藝都體現著我們的匠心精神。
             </p>
-            <p>我們的釀酒師是這片土地上的藝術家，他們擁有豐富的經驗與熱情，
-                以最嚴謹的工藝，用心釀造每一款啤酒。
-                在這個神奇的酒窖裡，你可以感受到釀酒的魔法，嗅到芬芳的香氣，品味到無與倫比的風味。</p>
-            <p>我們的釀酒廠是一個開放的聖殿，讓您可以近距離觀賞釀酒的全過程，
-                親身感受釀酒師的用心與技藝。無論您是啤酒愛好者、釀酒新手，
-                還是尋找不一樣味覺體驗的冒險家，這裡都將成為您的啤酒天堂。</p>
-            <p>在 MIU BEER，我們秉持著對品質的堅持，對創意的追求，用心釀造屬於這片土地的獨一無二的啤酒。
-                我們誠摯地邀請您踏進這個充滿激情的釀酒世界，一同探索啤酒的無限可能性！
-                讓我們一起舉杯，共享這美好的釀酒之旅！</p>
-            <a href="./aboutus.html">
-                點我看更多關於 Miu Beer ...
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-            </a>
+            <p>我們的釀酒師是這片土地上的藝術家，他們擁有豐富的經驗與熱情，以最嚴謹的工藝，用心釀造每一款啤酒。在這個神奇的酒窖裡，您可以感受釀酒的魔法，嗅到芬芳的香氣，品嚐無與倫比的風味。</p>
+            <p>我們的釀酒廠是一個開放的聖殿，您可以近距離觀賞釀酒的全過程，親身感受釀酒師的用心與技藝。無論您是啤酒愛好者、釀酒新手，還是尋找不一樣味覺體驗的冒險家，這裡都將成為您的啤酒天堂。</p>
+            <p>在MIU BEER，我們秉持著對品質的堅持，對創意的追求，用心釀造屬於這片土地的獨一無二的啤酒。我們誠摯地邀請您踏進這個充滿激情的釀酒世界，一同探索啤酒的無限可能性！</p>
+            <p>讓我們一起舉杯，共享這美好的釀酒之旅！</p>
+            <div class="link">
+                <a href="./aboutus.html">
+                    點我看更多關於 Miu Beer ...
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+            </div>
         </div>
     </article>
     <!-- 釀酒廠介紹結束 -->
