--- a/news.html
+++ b/news.html
@@ -17,51 +17,41 @@
 
 <body>
     <header>
-        <!-- 漢堡底色與線條 -->
-        <div class="burger-container">
-            <input type="checkbox" id="menu">
-            <label for="menu">
-                <div class="burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <!-- 漢堡旁的文字 -->
-                <div class="btn-open">
-                    <span>Menu</span>
-                </div>
-            </label>
-            <div class="menu-list">
-                <div class="menu-logo">
-                    <a href="index.html" target="_blank">
-                        <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
-                    </a>
-                </div>
-                <ul>
-                    <li>
-                        <a href="./news.html">最新消息</a>
-                    </li>
-                    <li>
-                        <a href="./aboutus.html">關於品牌</a>
-                    </li>
-                    <li>
-                        <a href="./classic-beer.html">啤酒介紹</a>
-                    </li>
-                    <li>
-                        <a href="./food.html">美味料理</a>
-                    </li>
-
-                    <li>
-                        <a href="./takeout.html">我要外帶</a>
-                    </li>
-                    <li>
-                        <a href="./location.html">美味據點</a>
-                    </li>
-                </ul>
+        <nav>
+            <div class="pic">
+                <a href="index.html">
+                    <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
+                </a>
             </div>
-        </div>
+            <ul>
+                <li>
+                    <a href="./news.html">最新消息</a>
+
+                </li>
+                <li>
+                    <a href="./aboutus.html">關於品牌</a>
+
+                </li>
+                <li>
+                    <a href="./classic-beer.html">啤酒介紹</a>
+                </li>
+                <li>
+                    <a href="./food.html">美味料理</a>
+                </li>
+                <li>
+                    <a href="./takeout.html">我要外帶</a>
+                </li>
+                <li>
+                    <a href="location.html">美味據點</a>
+                </li>
+            </ul>
+            <div class="shopping-cart">
+                <a href="./shopping-cart.html">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </a>
+            </div>
+        </nav>
     </header>
-    <!-- 漢堡選單結束 -->
     <!-- 立即訂位開始 -->
     <div class="booking-btn">
         <a href="./booking.html">
@@ -74,21 +64,13 @@
     <div class="marquee">
         <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
     </div>
-    <!-- 頂端logo、banner與購物車開始 -->
+    <!-- 頂端banner開始 -->
     <div class="top">
         <div class="top-mask">
             <span>Don't Worry Beer Happy ♡</span>
         </div>
-        <a href="index.html">
-            <img class="logo" src="./images/miu_logo_gold.svg" alt="Miu Beer">
-        </a>
-        <div class="shopping-cart">
-            <a href="./shopping-cart.html">
-                <img src="./images/shoppingcart.svg" alt="購物車">
-            </a>
-        </div>
     </div>
-    <!-- 頂端logo與購物車結束 -->
+    <!-- 頂端banner結束 -->
     <!-- 內文區開始 -->
     <div class="news-mask">
         <h1>
