--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     <div class="warning-box">
         <div class="warning-box-txt">
             <p class="drink">禁止酒駕<img src="./images/footer_drive.gif" alt="禁止酒駕">未滿十八歲 禁止飲酒</p>
-            <p class="tibame">本網站為緯育TibaMe前端班第86期學員專題作品，本平台僅供學習、展示之用。</p>
+            <p class="tibame">本網站為緯育TibaMe前端班第86期學員專題作品，<br>本平台僅供學習、展示之用。</p>
         </div>
     </div>
     <!-- footer結束 -->
